--- a/test/archives/lha213/README
+++ b/test/archives/lha213/README
@@ -4,6 +4,7 @@ Archives generated using LHA v2.13 (lha213.exe).
 
 lh0.lzh       - Archive containing uncompressed (stored) file.
 lh5.lzh       - Archive containing -lh5- compressed file.
+lh5_long.lzh  - Large -lh5- compressed file.
 sfx.exe       - Self-extracting archive.
 subdir.lzs    - Archive containing subdirectories.
 
