Add notes on command line arguments.
These notes are the result of experimenting with the Unix lha command
line options in order to determine the effect that they have, and help
to accurately implement these in the equivalent command line tool.

Also update TODO.

--- a/TODO
+++ b/TODO
@@ -13,11 +13,10 @@ Library:
  * Conditional compile to remove POSIX dependency.  Add Windows build.
 
 Command line tool:
- * Allow specific files to be extracted, including wildcards.
  * Create/update/modify archives.
  * Options:
    - q (quiet mode)
-   - n (not executable)
+   - n (don't execute command)
    - f (don't prompt for overwrite)
    - w (extract directory)
    - i (ignore directory path)
