Safely escape potentially malicious filenames.
A malicious filename might contain escape characters that be
interpreted by some terminal emulators in harmful ways. Escape
all unsafe data when printing to the screen and add archive
file for regression testing.

--- a/test/archives/regression/README
+++ b/test/archives/regression/README
@@ -8,3 +8,8 @@ abspath.lzh         - Archive containing a file with an absolute path.
                       would potentially allow arbitrary files on the
                       filesystem to be overwritten.
 
+badterm.lzh         - Archive containing a file that includes an unsafe
+                      terminal escape sequence (changes the title in the
+                      terminal window). This terminal escape sequence
+                      should not appear in list output.
+
