Fix bug when extracting truncated archives.
Incorrect EOF handling caused basic reader code to go into an
infinite loop. Thanks Jon Dowland.

--- a/test/archives/regression/README
+++ b/test/archives/regression/README
@@ -15,3 +15,5 @@ badterm.lzh         - Archive containing a file that includes an unsafe
 
 dir.lzh             - Archive that just contains a directory.
 
+truncated.lzh       - Unexpectedly truncated -lh5- archive.
+
