Sanitize directory paths and do not allow '..'
Archived files with '..' in the directory path might be used to escape
the directory being extracted into and overwrite arbitrary files.

--- a/test/archives/regression/README
+++ b/test/archives/regression/README
@@ -29,3 +29,8 @@ symlink1.lzh        - Symbolic link test. The archive contains a file named
                       and then as an actual file. Extraction should not
                       create bar.txt, or arbitrary files could be overwritten
                       by a maliciously constructed archive file.
+
+dotdot.lzh          - Archive containing paths with '..'. This could be used
+                      to break out of the extract directory and overwrite
+                      arbitrary files on the filesystem.
+
