--- a/doc/lha.1
+++ b/doc/lha.1
@@ -2,7 +2,10 @@
 .SH NAME
 lha \- compression tool for .lzh archive files.
 .SH SYNOPSIS
-.B lha [-]{lvtxe[q{num}][finv]}[w=<dir>] archive_file [file...]
+.B lha
+.RB [ - ]{ lvtxep [ q { \f[I]num\f[] }][ finv ]}[ w= < \f[I]dir\f[] >] 
+.I archive_file
+.RI [ "file ..." ]
 .SH DESCRIPTION
 .PP
 .B lha
