Update copyright year.

--- a/doc/lha.1
+++ b/doc/lha.1
@@ -189,7 +189,7 @@ are replaced by a question mark.
 .SH AUTHOR
 Lhasa was written and is maintained by Simon Howard.
 .SH COPYRIGHT
-Copyright \(co 2011, 2012 Simon Howard.
+Copyright \(co 2011-2023 Simon Howard.
 .PP
 Permission to use, copy, modify, and/or distribute this software
 for any purpose with or without fee is hereby granted, provided
