Fix Amiga -lh0- directories bug.
The Amiga version of LhA (one of them?) can generate malformed archives
where directories are represented with the -lh0- compression type
instead of -lhd-. Headers of this type are considered invalid and
extraction will stop once one of them is reached. Since this bug is
limited to just Amiga archives, we can construct a targeted workaround
that internally fixes the compression method to the -lhd- type.

Thanks go to @zzarko for originally reporting the bug, @polluks for
supplying an additional example, @alfredone for supplying a very useful
minimal test case archive (included here), and @jsummers for correctly
deducing the underlying bug.

This fixes #31.

--- a/test/archives/lha_amiga_122/README
+++ b/test/archives/lha_amiga_122/README
@@ -18,3 +18,12 @@ Self extracting archive generated with LhASfx v1.2:
 
 sfx.run       - Self extracting archive containing lh4.lzh
 
+Bug test archive:
+
+lh0_dirs_bug.lzh - File where a directory entry is mistakenly encoded as a
+                   zero-length file with -lh0- compression method (Lhasa
+                   bug #31). Thanks to Github user @alfredone for supplying
+                   this. I don't actually know what version of the LhA tool
+                   generated this file and has this bug, this directory was
+                   just a convenient place to put it.
+
