Add relevant web links and my email address.

--- a/doc/lha.1
+++ b/doc/lha.1
@@ -156,6 +156,13 @@ Extract the contents of \fBfoobar.lzh\fR to \fB/tmp\fR, overwriting any
 existing files found there, and suppressing normal output (similar to
 how other Unix tools such as \fBcp\fR(1) or \fBtar\fR(1) act silently
 by default).
+.SH WWW
+.UR https://fragglet.github.io/lhasa
+.UE
+.SH BUG REPORTS
+Bugs can be reported to the GitHub issue tracker:
+.UR https://github.com/fragglet/lhasa
+.UE
 .SH SEE ALSO
 \fBunzip\fR(1), \fBtar\fR(1), \fBgzip\fR(1), \fBbzip2\fR(1),
 \fBxz\fR(1), \fBlzip\fR(1)
@@ -187,7 +194,10 @@ The tool does not currently do text format conversion for non-ASCII
 filenames when listing the contents of archives. Non-ASCII characters
 are replaced by a question mark.
 .SH AUTHOR
-Lhasa was written and is maintained by Simon Howard.
+Lhasa was written and is maintained by
+.MT fraggle@gmail.com
+Simon Howard
+.ME .
 .SH COPYRIGHT
 Copyright \(co 2011-2023 Simon Howard.
 .PP
