Update manpage: OS name never contains a space now

--- a/doc/lha.1
+++ b/doc/lha.1
@@ -105,8 +105,9 @@ The following are detailed descriptions of each of these fields:
 For files compressed on a Unix system, this lists the permissions in the same
 format that \fBls\fR(1) uses when it is invoked with the \fB-l\fR option. If
 the file was not created on a Unix system, the OS type is instead displayed in
-square brackets. Examples are "[MS-DOS]" and "[Mac OS]". If the file was
-created on Microware OS-9, the permissions for that system will also be shown.
+square brackets. Examples are "[MS-DOS]" and "[MacOS]"; the OS name never
+contains a space. If the file was created on Microware OS-9, the permissions
+for that system will also be shown.
 .TP
 \fBUnix user ID / group IDs (UID/GID)\fR
 For files compressed on a Unix system, this lists the user and group IDs of
