Add a note on the origin of the name

--- a/doc/lha.1
+++ b/doc/lha.1
@@ -293,6 +293,12 @@ Watazaki and Tsugio Okamoto, but was released under a software
 license that does not conform to the Free Software or Open Source
 Definitions. Lhasa was developed as a drop\-in replacement that is
 Free Software and Open Source.
+.PP
+The name "LHA" and the .lzh filename extension are a reference to the
+compression algorithm: a combination of Lempel–Ziv–Storer–Szymanski
+dictionary coding and Huffman encoding. Similar schemes are used in
+other compression algorithms such as Deflate (used in gzip/zlib, PNG
+image files, and the .zip format).
 .SH BUGS
 The current version does not allow the creation of new archive files.
 .PP
